--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ php:
   - 5.5
 
 before_script:
-    - pecl install amqp -s
+    - pecl install -s amqp
     - wget http://getcomposer.org/composer.phar
     - php composer.phar install --dev
