--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.2",
         "ext-amqp": "~1.2",
-        "symfony/symfony": "2.2.*",
+        "symfony/symfony": "2.2.*"
     },
     "require-dev": {
         "phpunit/PHPUnit": "3.7.*",
