--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "ext-amqp": "~1.2",
+        "ext-amqp": ">=1.2",
         "symfony/symfony": "2.2.*"
     },
     "require-dev": {
