--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,16 @@
             "homepage": "http://www.instaclick.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/instaclick/ObjectCalisthenicsSniffs.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/instaclick/CodingStandard.git"
+        }
+    ],
     "require": {
         "php": ">=5.3.2",
         "ext-amqp": ">=1.2",
@@ -16,7 +26,11 @@
     },
     "require-dev": {
         "phpunit/PHPUnit": "3.7.*",
-        "instaclick/base-test-bundle": "dev-master"
+        "instaclick/base-test-bundle": "dev-master",
+        "squizlabs/php_codesniffer": "dev-master#580e888",
+        "instaclick/symfony2-coding-standard": "dev-remaster#180a19d",
+        "instaclick/object-calisthenics-sniffs": "dev-master#498e162",
+        "instaclick/coding-standard": "1.1"
     },
     "autoload": {
         "psr-0": { "IC\\Bundle\\Base\\AmqpBundle": "" }
