--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     "require": {
         "php": ">=5.3.2",
         "ext-amqp": "~1.2",
-        "symfony/symfony": "2.2.*"
+        "symfony/symfony": "~2.2"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*"
+        "phpunit/phpunit": "~3.7"
     },
     "autoload": {
         "psr-0": { "IC\\Bundle\\Base\\AmqpBundle": "" }
